src/objects/pse__Concur_Expense_Type_Mapping__mdt.object
<CustomObject>
    <description>Contains records that specify information required for Concur to PSA Expense Type Mapping</description>
    <fields>
        <fullName>pse__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Concur_Expense_Category__c</fullName>
        <description>This value is ignored if the Concur Expense Type field is populated.</description>
        <inlineHelpText>This value is ignored if the Concur Expense Type field is populated.</inlineHelpText>
        <label>Concur Expense Category</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Concur_Expense_Type__c</fullName>
        <label>Concur Expense Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__FF_Expense_Type__c</fullName>
        <label>PSA Expense Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Concur Expense Type Mapping</label>
    <pluralLabel>Concur Expense Type Mappings</pluralLabel>
</CustomObject>